<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.itbstudentapp.MainActivity"
    android:background="#0bb736">

    <include
        layout="@layout/toolbar"
        android:id="@+id/tool_bar">

    </include>

    <ScrollView
        android:layout_below="@id/tool_bar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/itb_above1"
        >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        >

        <Button
            android:id="@+id/transport"

            android:layout_width="0dp"
            android:layout_height="140sp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/forum_panels"
            android:backgroundTint="#ccd6d322"

            android:gravity="center"
            android:text="@string/title_activity_transport"
            android:textColor="@android:color/white"
            android:textSize="20sp"

            />

        <Button
            android:id="@+id/timetable"
            android:layout_width="0dp"
            android:layout_height="140sp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/forum_panels"

            android:backgroundTint="#cc011966"
            android:gravity="center"
            android:text="@string/title_activity_timetable"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/quiz"
            android:layout_width="0dp"
            android:layout_height="140sp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/forum_panels"
            android:backgroundTint="#ccce371c"
            android:gravity="center"
            android:text="@string/title_activity_quiz"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

            <Button
                android:id="@+id/map"
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@drawable/forum_panels"
                android:backgroundTint="#cc299308"
                android:text="@string/title_activity_map"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/forum"
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@drawable/forum_panels"
                android:backgroundTint="#cc069b71"
                android:text="@string/title_activity_forum"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/chat"
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@drawable/forum_panels"
                android:backgroundTint="#cc91057c"
                android:text="@string/title_activity_chat"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/links"
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@drawable/forum_panels"
                android:backgroundTint="#cc8c010a"
                android:text="@string/title_activity_links"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="140sp"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@drawable/forum_panels"
                android:backgroundTint="#cc33b5e5"
                android:text="@string/title_activity_phone"

                android:textColor="@android:color/white"
                android:textSize="20sp" />

    </GridLayout>

</ScrollView>
</RelativeLayout>
